fix: improved dark mode colors and added leading to work titles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,12 +10,16 @@
 
 .dark {
   --foreground: #f5f5f4; /* tailwind stone 100 */
-  --background: #0c0a09; /* tailwind stone 950 */
+  --background: #1c1917; /* tailwind stone 950 */
   --secondary: #57534e; /* tailwind stone 600 */
 }
 
 * {
   scroll-behavior: smooth;
+}
+
+html {
+  background-color: var(--background);
 }
 
 strong {
